--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -61,12 +61,11 @@ margin-left: -15px;
 
  /*redessociales*/
 
-  ig fb{
-  width: $iconos; }
-
+ .ig {width: 40px; }
+.fb {width: 40px; }
 }
 .li2 {
-width: 5px; 
+width: 20px; 
 transition: 2s ;
 display: inline-flex;
 }
