--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@
 /* disenio*/
 * {
   margin: 15px; }
-/*textos*/
+
 h1, h2, h3, h4 {
   color: negro; }
 
@@ -39,14 +39,15 @@ h1, h2, h3, h4 {
 
 .row {
   margin-right: -15px;
-  margin-left: -15px;}
- 
-  /*redessociales*/ 
-  .row  {
-    width: 40px; }
+  margin-left: -15px; }
+
+/*redessociales*/
+.row {
+  margin-right: -15px;
+  margin-left: -15px; }
 
 .li2 {
-  width: 20px;
+  width: 90px;
   transition: 2s;
   display: inline-flex; }
 
@@ -65,3 +66,9 @@ li {
   background-color: #e1e3e1;
   transition: 2s;
   text-shadow: 5px 5px 10px #000000; }
+
+.ig {
+  width: 40px; }
+
+.fb {
+  width: 40px; }
