--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,6 +6,19 @@
 h1, h2, h3, h4 {
   color: negro; }
 
+.text-center:hover {
+  fuente: "roboto";
+  tamanio: 400;
+  forma: bold;
+  width: 30px;
+  height: auto; }
+
+.text-center:hover {
+  background-color: #b3e971;
+  color: #cad6a7;
+  background-color: #e1e3e1;
+  transition: width 2s, height 2s, transform 2s; }
+
 .paddingTB {
   align-items: center;
   padding: 50px 10px 10px 10px; }
@@ -15,6 +28,9 @@ h1, h2, h3, h4 {
   padding-left: 20px;
   margin-right: auto;
   margin-left: auto; }
+
+.form-horizontal {
+  background: lightgrey; }
 
 /*seccion servicios*/
 .marketing h2 {
